# learn_dg

./: .deploy_key.enc  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  Pipfile  README.md  deploy.sh  example-project.md  index.html  learn_dg.md  plotter.py  requirements.txt  search.html  setup.cfg  test1D.geo  test1D.msh  test2D.geo
cmake/: Toolchain-i686-w64-mingw32.cmake  Toolchain-x64-mingw32.cmake  Toolchain-x86_64-w64-mingw32.cmake
docs/: index.html  learn_dg.md  search.html
docs/html/: index.html  search.html
docs/interface/: fun2d_interf.html  func1.html  func2.html
docs/lists/: absint.html  files.html  modules.html  procedures.html  programs.html
docs/module/: assembly.html  integration.html  io.html  legendre.html  linalg.html  misc.html
docs/proc/: assemble.html  assembleelementalmatrix.html  basis_1d.html  cgwt.html  det2.html  eye.html  gaussquad.html  gaussquad_wrapper.html  get_command_argument_wrapper.html  getalpha.html  getarow.html  getie.html  getjacobian.html  getxy.html  initialize_global_mats.html  integrate.html  integrate2d.html  integrate_basis_1d.html  integrate_basis_1d_ie.html  inv2.html  lgwt.html  linsolve.html  linsolve_quick.html  r8mat_print.html  r8mat_print_some.html  read_gmsh_file_1d.html  set_bcs.html  vandermonde.html  write_out_solution.html
docs/program/: doubleint.html  main.html
docs/sourcefile/: assembly.f90.html  doubleint.f90.html  integration.f90.html  io.f90.html  legendre.f90.html  linalg.f90.html  main.f90.html  misc.f90.html
docs/src/: integration.f90  io.f90  legendre.f90  linalg.f90  misc.f90
docs/user-guide/: index.md
interface/: assemble.html  assembleelementalmatrix.html  basis_1d.html  fun1d_interf.html  fun2d_interf.html  gaussquad.html  gaussquad~2.html  getalpha.html  getalpha1d.html  getalpha2d.html  getalpha_.html  getarow.html  getjacobian.html  getxy.html  initialize_global_mats.html  integrate.html  pascal.html  pascal_row.html  pascal_single_row.html  set_bcs.html  sub1d_interf.html
lists/: files.html  modules.html  procedures.html  programs.html  types.html
module/: assembly.html  integration.html  io.html  legendre.html  linalg.html  misc.html  mod_assembly.html  mod_assembly_c.html  mod_integration.html  mod_io.html  mod_legendre.html  mod_legendre_c.html  mod_linalg.html  mod_misc.html  mod_settings.html  pascal.html  pascal_1d.html  pascal_2d.html  pascal_smod.html  smod_assemble_1d.html  smod_assemble_2d.html  smod_integration.html  smod_legendre_1d.html  smod_legendre_2d.html
page/: index.html
proc/: adder.html  adder_c.html  assemble.html  assemble1d.html  assemble1d_c.html  assemble2d.html  assemble2d_c.html  assembleelementalmatrix.html  assembleelementalmatrix1d.html  assembleelementalmatrix1d_c.html  assembleelementalmatrix2d.html  assembleelementalmatrix2d_c.html  basis_1d.html  cgwt.html  create_simple_array_c.html  det2.html  eye.html  gaussquad.html  gaussquad_rosetta.html  gaussquad_wrapper.html  get_command_argument_wrapper.html  getalpha.html  getalpha1d.html  getalpha2d.html  getarow.html  getarow1d.html  getarow2d.html  getarow_.html  getie.html  getjacobian.html  getjacobian_2d.html  getx.html  getxy.html  getxy_2d.html  initialize_global_mats.html  integrate.html  integrate1d.html  integrate2d.html  integrate_basis_1d.html  integrate_basis_1d_ie.html  (+18 more)
program/: doubleint.html  driver1.html  driver1d.html  driver2.html  driver2d.html  main.html
sourcefile/: assembly.f90.html  assembly_mod.f90.html  doubleint.f90.html  driver1d.f90.html  driver2d.f90.html  drivera.f90.html  driverb.f90.html  integration.f90.html  integration_mod.f90.html  io.f90.html  io_mod.f90.html  legendre.f90.html  legendre_mod.f90.html  linalg.f90.html  linalg_mod.f90.html  main.f90.html  misc.f90.html  misc_mod.f90.html  mod_assembly.f90.html  mod_assembly_c.f90.html  mod_integration.f90.html  mod_io.f90.html  mod_legendre.f90.html  mod_legendre_c.f90.html  mod_linalg.f90.html  mod_misc.f90.html  mod_settings.f90.html  pascal_1d_smod.f90.html  pascal_2d_smod.f90.html  pascal_smod.f90.html  smod_assemble_1d.f90.html  smod_assemble_2d.f90.html  smod_integration.f90.html  smod_legendre_1d.f90.html  smod_legendre_2d.f90.html
src/: CMakeLists.txt  assembly.f90  assembly_mod.f90  doubleint.f90  driver1D.f90  driver2D.f90  driverA.f90  driverB.f90  integration.f90  integration_mod.f90  io.f90  io_mod.f90  legendre.f90  legendre_mod.f90  linalg.f90  linalg_mod.f90  main.f90  misc.f90  misc_mod.f90  mod_assembly.f90  mod_assembly_c.f90  mod_integration.f90  mod_io.f90  mod_legendre.f90  mod_linalg.f90  mod_misc.f90  mod_settings.f90  pascal_1D_smod.f90  pascal_2D_smod.f90  pascal_smod.f90  smod_assemble_1D.f90  smod_integration.f90  smod_legendre_2D.f90  types.f90
src/assembly/: CMakeLists.txt  mod_assembly.f90  mod_assembly_c.f90  smod_assemble_1D.f90  smod_assemble_2D.f90
src/integration/: CMakeLists.txt  mod_integration.f90  smod_integration.f90
src/io/: CMakeLists.txt  mod_io.f90
src/legendre/: CMakeLists.txt  mod_legendre.f90  mod_legendre_c.f90  pascal_1D_smod.f90  pascal_2D_smod.f90  smod_legendre_1D.f90  smod_legendre_2D.f90  smod_pascal_1D.f90  smod_pascal_2D.f90
src/linalg/: CMakeLists.txt  mod_linalg.f90
src/mesh/: CMakeLists.txt  mod_mesh.f90
src/misc/: CMakeLists.txt  mod_misc.f90
src/settings/: CMakeLists.txt  mod_settings.f90
test/: .gitignore  a.out  apple.f90  basis.f90  chebyshev.m  example_ctypes.f90  gauss  gauss.f90  helper.py  helpers.py  ian.f90  interactive.py  lapack_prb.out  leg.csv  leg_solve.f90  legendre.m  main.m  meshes.py  plotter.py  procTest.f90  test.f90  test1.f90  test2D.geo  test3D.geo  test_assemble_1D.py  test_assemble_2D.py  test_c.py  test_ctypes.f90  test_elemental_1D.py  test_elemental_2D.py  test_main.py  test_pascal.py  test_proc_ptr.f90  test_ptr.f90  test_python_fem.ipynb
tests/: example_ctypes.py  helpers.py  meshes.py  plotter.py  test1D.geo  test_assemble_1D.py  test_assemble_2D.py  test_elemental_1D.py  test_elemental_2D.py  test_pascal.py
tipuesearch/: tipuesearch_content.js
type/: t_settings.html
(+58 files in other folders)
